After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 645027 - search button is inconsistent wrt saved and bookmarked searches
search button is inconsistent wrt saved and bookmarked searches
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Main Toolbar
2.91.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-03-17 14:50 UTC by Stefano Teso
Modified: 2011-03-21 15:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.05 KB, patch)
2011-03-17 14:51 UTC, Stefano Teso
needs-work Details | Review

Description Stefano Teso 2011-03-17 14:50:09 UTC
When opening a saved search or a bookmarked search from the places sidebar, the search bar is shown. However the state of the toolbar' search button is _not_ updated accordingly. This results in:

- to close the search bar, the user has to click the search button twice. this is both annoying and confusing.

- when opening a saved search /home/foo/something.savedSearch, the path bar shows the whole path /home/foo. However, clicking e.g. /home in the path bar results in home being shown with the search bar still on.

Attached is a patch that fixes both issues (AFAICS) by changing NautilusToolbar::toolbar_update_appearance () to also update the state of the search button appropriately.
Comment 1 Stefano Teso 2011-03-17 14:51:20 UTC
Created attachment 183634 [details] [review]
patch

Here it is. Please review.
Comment 2 Cosimo Cecchi 2011-03-21 15:35:59 UTC
Hi Stefano; this patch is not good, it makes nautilus lock up when pressing Ctrl+F. I pushed another patch to master which fixes this. Thanks for reporting.