window-pane: toggle the search button when showing a saved search

https://bugzilla.gnome.org/show_bug.cgi?id=645027